# keylol-tg

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
clients/: forum_client.py  telegram_client.py
models/: __init__.py  post.py  thread.py
services/: post_service.py  scheduler.py
